fix: homepage strange overflow problem

--- a/src/scss/layout/_generalLayout.scss
+++ b/src/scss/layout/_generalLayout.scss
@@ -2,6 +2,7 @@
   display: flex;
   flex-direction: row;
   background-color: rgb(241, 242, 241);
+  overflow: hidden;
 }
 
 .general-title{
